# zfc-x

./: Cargo.toml  README.md
migrations/: 20231115084444_init.sql
src/: dto.rs  main.rs  templates.rs
templates/: base.html  index.html  spinner.html  stream.html  styles.css  todo.html  todos.html
