[package]
name = "zfc-x"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.32.0"
shuttle-runtime = "0.32.0"
tokio = "1.28.2"
tracing = "0.1.40"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
shuttle-shared-db = { version = "0.32.0", features = ["postgres"] }
